# Program-Backends

./: .gitignore  Anchor.toml  package.json
app/solana-token-backend/: .env.example  package-lock.json  package.json
app/solana-token-backend/src/: index.ts  raydium-swap.ts  raydium.config.ts
app/solana-token-backend/src/db/: index.ts
app/solana-token-backend/src/idl/: ai_agent.ts
app/solana-token-backend/src/models/: creatorSchema.ts  tokenSchema.ts  walletSchema.ts
app/trading-backend/: .env.example  package-lock.json  package.json
app/trading-backend/src/: config.ts  index.ts  monitor.ts  queues.ts
app/trading-backend/src/models/: tokenSchema.ts
app/trading-backend/src/utils/: pool.ts
app/transaction_tracker/: .env.example  ecosystem.config.js  package-lock.json  package.json
app/transaction_tracker/src/: config.ts  index.ts  queues.ts
app/transaction_tracker/src/models/: tokenSchema.ts  transactionSchema.ts
app/transaction_tracker/src/workers/: priceUpdateWorker.ts  transactionUpdateWorker.ts
app/twitter-bot/: .env.example  last-processed.txt  package-lock.json  package.json
app/twitter-bot/src/: start.ts  test-mentions.ts
programs/program-backends/: Cargo.toml
programs/program-backends/src/: consts.rs  errors.rs  lib.rs  state.rs
programs/program-backends/src/instructions/: add_liquidity.rs  buy.rs  create_pool.rs  harvest_fee.rs  harvest_locked_fee.rs  initialize.rs  lock_cpmm_lp.rs  migrate_to_meteora.rs  migrate_to_raydium.rs  mod.rs  raydium_init.rs  sell.rs  swap.rs  update_fees.rs
tests/: program-backends.ts
(+8 files in other folders)
