[package]
name = "ai-agent"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_agent"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-cpmm-cpi/devnet"]

[dependencies]
anchor-lang = { version="0.31.0", features = ["init-if-needed"] }
anchor-spl = "=0.31.0"
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi", branch = "anchor-0.31.0" }